--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <div class="col-lg-6 menu-item filter-appetizers">
           <div class="menu-content">
-            بطاطا مقلية <span>2.50 $</span>
+            بطاطا مقلية <span>3.00 $</span>
           </div>
         </div>
 
@@ -153,21 +153,21 @@
 
         <div class="col-lg-6 menu-item filter-appetizers">
           <div class="menu-content">
-            بطاطا بكذبرة <span>3.00 $</span>
+            بطاطا بكذبرة <span>3.50 $</span>
           </div>
         </div>
 
 
         <div class="col-lg-6 menu-item filter-appetizers">
           <div class="menu-content">
-            ورق عنب <span>3.00 $</span>
+            ورق عنب <span>4.00 $</span>
           </div>
         </div>
 
 
         <div class="col-lg-6 menu-item filter-appetizers">
           <div class="menu-content">
-            معجنات مشكلة <span>4.00 $</span>
+            معجنات مشكلة <span>3.00 $</span>
           </div>
         </div>
 
@@ -181,7 +181,7 @@
 
         <div class="col-lg-6 menu-item filter-appetizers">
           <div class="menu-content">
-            تابلة <span>5.00 $</span>
+            تابلة <span>4.50 $</span>
           </div>
         </div>
 
@@ -241,7 +241,7 @@
 
         <div class="col-lg-6 menu-item filter-salad">
           <div class="menu-content">
-            راس عصفور<span>4.00 $</span>
+            راس عصفور<span>5.00 $</span>
           </div>
         </div>
 
@@ -254,13 +254,13 @@
 
         <div class="col-lg-6 menu-item filter-salad">
           <div class="menu-content">
-             نخاع<span>4.00 $</span>
+             نخاع<span>5.00 $</span>
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-salad">
           <div class="menu-content">
-            صفيحة <span>4.00 $</span>
+            صفيحة <span>5.00 $</span>
           </div>
         </div>
 
@@ -278,7 +278,7 @@
 
         <div class="col-lg-6 menu-item filter-platter">
           <div class="menu-content">
-            شيش لحمة<span>4.50 $</span>
+            شيش لحمة<span>4.00 $</span>
           </div>
         </div>
 
@@ -332,37 +332,37 @@
 
         <div class="col-lg-6 menu-item filter-sandwich">
           <div class="menu-content">
-           كفتا<span>3.50 $</span>
+           كفتا<span>4.00 $</span>
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-sandwich">
           <div class="menu-content">
-             طاووق<span>3.50 $</span>
+             طاووق<span>4.00 $</span>
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-sandwich">
           <div class="menu-content">
-             سجق <span>3.50 $</span>
+             سجق <span>4.00 $</span>
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-sandwich">
           <div class="menu-content">
-           مقانق<span>3.50 $</span>
+           مقانق<span>4.00 $</span>
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-sandwich">
           <div class="menu-content">
-             صفايح <span>3.50 $</span>
+             صفايح <span>4.00 $</span>
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-sandwich">
           <div class="menu-content">
-             سودة عجل <span>3.50 $</span>
+             سودة عجل <span>4.00 $</span>
           </div>
         </div>
 
@@ -396,7 +396,7 @@
 
         <div class="col-lg-6 menu-item filter-lebnene">
           <div class="menu-content">
-          مياه صغيرة <span>0.40 $</span>
+          مياه صغيرة <span>0.50 $</span>
           </div>
         </div>
 
@@ -410,7 +410,7 @@
 
         <div class="col-lg-6 menu-item filter-lebnene">
           <div class="menu-content">
-            بيريه <span>2.00 $</span>
+            بيريه <span>2.50 $</span>
           </div>
         </div>
 
@@ -427,14 +427,14 @@
 
         <div class="col-lg-6 menu-item filter-sandwiches">
           <div class="menu-content">
-            ربعية عرق BRIN <span>5.00 $</span>
+            ربعية عرق BRIN <span>6.00 $</span>
           </div>
         </div>
 
 
         <div class="col-lg-6 menu-item filter-sandwiches">
           <div class="menu-content">
-            نصية عرق <span>8.00 $</span>
+            نصية عرق <span>9.00 $</span>
           </div>
         </div>
 
@@ -445,38 +445,50 @@
           </div>
         </div>
 
-
         <div class="col-lg-6 menu-item filter-sandwiches">
           <div class="menu-content">
-            0.75CL  ويسكي أحمر <span>--</span>
+            كاس عرق<span>2.00 $</span>
           </div>
         </div>
 
 
         <div class="col-lg-6 menu-item filter-sandwiches">
           <div class="menu-content">
-            نصية ويسكي أحمر <span>--</span>
+            0.75CL  ويسكي أحمر <span>35.00 $</span>
           </div>
         </div>
 
 
         <div class="col-lg-6 menu-item filter-sandwiches">
           <div class="menu-content">
-            ربعية ويسكي أحمر <span>--</span>
+            نصية ويسكي أحمر <span>17.00 $</span>
           </div>
         </div>
 
 
         <div class="col-lg-6 menu-item filter-sandwiches">
           <div class="menu-content">
-            0.75CL ويسكي أسود <span>--</span>
+            ربعية ويسكي أحمر <span>10.00 $</span>
+          </div>
+        </div>
+
+        <div class="col-lg-6 menu-item filter-sandwiches">
+          <div class="menu-content">
+            كاس ويسكي أحمر <span>3.50 $</span>
           </div>
         </div>
 
 
         <div class="col-lg-6 menu-item filter-sandwiches">
           <div class="menu-content">
-            نصية ويسكي أسود <span>--</span>
+            0.75CL ويسكي أسود <span>50.00 $</span>
+          </div>
+        </div>
+
+
+        <div class="col-lg-6 menu-item filter-sandwiches">
+          <div class="menu-content">
+            نصية ويسكي أسود <span>30.00 $</span>
           </div>
         </div>
 
@@ -484,6 +496,12 @@
         <div class="col-lg-6 menu-item filter-sandwiches">
           <div class="menu-content">
             ربعية ويسكي أسود <span>--</span>
+          </div>
+        </div>
+
+        <div class="col-lg-6 menu-item filter-sandwiches">
+          <div class="menu-content">
+            كاس ويسكي أسود <span>5.00 $</span>
           </div>
         </div>
 
