--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <li data-filter=".filter-lebnene">مشروبات باردة</li>
             <li data-filter=".filter-kaake">مشروبات روحية</li>
             <li data-filter=".filter-sandwiches">مشروبات ساخنة</li>
+            <li data-filter=".filter-arguile"> أرغيلة</li>
           </ul>
         </div>
       </div>
@@ -549,7 +550,24 @@
         </div>
 
 
+        <div class="col-lg-12 menu-item filter-arguile">
+          <br>
+          <div class=" text-center ">
+            <b> أرغيلة</b>
+          </div>
+        </div>
 
+
+
+        <div class="col-lg-6 menu-item filter-arguile">
+          <div class="menu-content">
+            أرغيلة <span>4.50 $</span>
+          </div>
+        </div>
+
+        <div class="col-lg-12 menu-item filter-arguile">
+          <hr>
+        </div>
 
 
 
