--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@
 
         <div class="col-lg-6 menu-item filter-appetizers">
           <div class="menu-content">
+            لبنة مع ثوم <span>3.50 $</span>
+          </div>
+        </div>
+
+
+        <div class="col-lg-6 menu-item filter-appetizers">
+          <div class="menu-content">
             حمص <span>2.50 $</span>
           </div>
         </div>
@@ -141,6 +148,13 @@
         <div class="col-lg-6 menu-item filter-appetizers">
           <div class="menu-content">
             جبنة مع تين <span>6.00 $</span>
+          </div>
+        </div>
+
+        
+        <div class="col-lg-6 menu-item filter-appetizers">
+          <div class="menu-content">
+            جبنة بلدية  <span>3.00 $</span>
           </div>
         </div>
 
@@ -221,6 +235,22 @@
             سودة دجاح<span>3.00 $</span>
           </div>
         </div>
+
+
+        <div class="col-lg-6 menu-item filter-salad">
+          <div class="menu-content">
+            لحمة الصيّاد<span>8.00 $</span>
+          </div>
+        </div>
+
+
+        <div class="col-lg-6 menu-item filter-salad">
+          <div class="menu-content">
+            (6) عصافير<span>10.00 $</span>
+          </div>
+        </div>
+
+
 
         <div class="col-lg-6 menu-item filter-salad">
           <div class="menu-content">
