--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
 
         <div class="col-lg-6 menu-item filter-breakfast">
           <div class="menu-content">
-            فتوش <span>3.00 $</span>
+            فتوش <span>4.00 $</span>
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-breakfast">
           <div class="menu-content">
-            تبولة <span>3.00 $</span>
+            تبولة <span>4.00 $</span>
           </div>
         </div>
 
@@ -94,6 +94,27 @@
         <div class="col-lg-6 menu-item filter-breakfast">
           <div class="menu-content">
             سلطة الصيّاد <span>3.00 $</span>
+          </div>
+        </div>
+
+
+        <div class="col-lg-6 menu-item filter-breakfast">
+          <div class="menu-content">
+             مكدوس <span>4.00 $</span>
+          </div>
+        </div>
+
+
+        <div class="col-lg-6 menu-item filter-breakfast">
+          <div class="menu-content">
+             كبيس و زيتون <span>2.00 $</span>
+          </div>
+        </div>
+
+
+        <div class="col-lg-6 menu-item filter-breakfast">
+          <div class="menu-content">
+             بزورات <span>1.00 $</span>
           </div>
         </div>
 
@@ -182,7 +203,7 @@
 
         <div class="col-lg-6 menu-item filter-appetizers">
           <div class="menu-content">
-            معجنات مشكلة <span>3.00 $</span>
+            معجنات مشكلة <span>3.50 $</span>
           </div>
         </div>
 
@@ -196,14 +217,14 @@
 
         <div class="col-lg-6 menu-item filter-appetizers">
           <div class="menu-content">
-            تابلة <span>4.50 $</span>
+            تابلة <span>5.00 $</span>
           </div>
         </div>
 
 
         <div class="col-lg-6 menu-item filter-appetizers">
           <div class="menu-content">
-             حمص مع لحمة <span>5.00 $</span>
+             حمص مع لحمة <span>4.50 $</span>
           </div>
         </div>
 
@@ -246,7 +267,7 @@
 
         <div class="col-lg-6 menu-item filter-salad">
           <div class="menu-content">
-            (6) عصافير<span>10.00 $</span>
+            (6) عصافير<span>12.00 $</span>
           </div>
         </div>
 
@@ -285,13 +306,27 @@
 
         <div class="col-lg-6 menu-item filter-salad">
           <div class="menu-content">
-             نخاع<span>5.00 $</span>
+             نخاع<span>6.00 $</span>
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-salad">
           <div class="menu-content">
-            صفيحة <span>5.00 $</span>
+            صفيحة <span>2.00 $</span>
+          </div>
+        </div>
+
+
+        <div class="col-lg-6 menu-item filter-salad">
+          <div class="menu-content">
+            كفتا كرز <span>8.00 $</span>
+          </div>
+        </div>
+
+
+        <div class="col-lg-6 menu-item filter-salad">
+          <div class="menu-content">
+            شاورما <span>8.00 $</span>
           </div>
         </div>
 
@@ -309,7 +344,7 @@
 
         <div class="col-lg-6 menu-item filter-platter">
           <div class="menu-content">
-            شيش لحمة<span>4.00 $</span>
+            شيش لحمة<span>4.50 $</span>
           </div>
         </div>
 
@@ -343,6 +378,32 @@
           </div>
         </div>
 
+        <div class="col-lg-6 menu-item filter-platter">
+          <div class="menu-content">
+             نص فرّوج <span>5.00 $</span>
+          </div>
+        </div>
+
+        <div class="col-lg-6 menu-item filter-platter">
+          <div class="menu-content">
+             دقة مشوية <span>5.00 $</span>
+          </div>
+        </div>
+
+        <div class="col-lg-6 menu-item filter-platter">
+          <div class="menu-content">
+             فوارغ <span>10.00 $</span>
+          </div>
+        </div>
+
+        <div class="col-lg-6 menu-item filter-platter">
+          <div class="menu-content">
+             كاستاليتا <span>7.00 $</span>
+          </div>
+        </div>
+
+
+
         <div class="col-lg-12 menu-item filter-platter">
           <hr>
         </div>
@@ -357,7 +418,7 @@
 
         <div class="col-lg-6 menu-item filter-sandwich">
           <div class="menu-content">
-            لحمة<span>4.50 $</span>
+            لحمة<span>5.00 $</span>
           </div>
         </div>
 
@@ -387,13 +448,27 @@
 
         <div class="col-lg-6 menu-item filter-sandwich">
           <div class="menu-content">
-             صفايح <span>4.00 $</span>
+             صفيحة <span>2.00 $</span>
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-sandwich">
           <div class="menu-content">
-             سودة عجل <span>4.00 $</span>
+             سودة دجاج <span>4.00 $</span>
+          </div>
+        </div>
+
+
+        <div class="col-lg-6 menu-item filter-sandwich">
+          <div class="menu-content">
+             بطاطا <span>2.00 $</span>
+          </div>
+        </div>
+
+
+            <div class="col-lg-6 menu-item filter-sandwich">
+          <div class="menu-content">
+             شاورما لحمة <span>7.00 $</span>
           </div>
         </div>
 
@@ -435,6 +510,13 @@
         <div class="col-lg-6 menu-item filter-lebnene">
           <div class="menu-content">
             بيرة <span>2.50 $</span>
+          </div>
+        </div>
+
+
+        <div class="col-lg-6 menu-item filter-lebnene">
+          <div class="menu-content">
+            بيرة مكسيكن <span>3.00 $</span>
           </div>
         </div>
 
@@ -523,12 +605,12 @@
           </div>
         </div>
 
-
+<!-- 
         <div class="col-lg-6 menu-item filter-sandwiches">
           <div class="menu-content">
             ربعية ويسكي أسود <span>--</span>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-lg-6 menu-item filter-sandwiches">
           <div class="menu-content">
