--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
         <div class="col-lg-6 menu-item filter-appetizers">
           <div class="menu-content">
-            معجنات مشكلة <span>4.00 $</span>
+            معجنات مشكلة <span>4.50 $</span>
           </div>
         </div>
 
@@ -217,7 +217,7 @@
 
         <div class="col-lg-6 menu-item filter-appetizers">
           <div class="menu-content">
-            تابلة <span>5.00 $</span>
+            تابلة <span>7.00 $</span>
           </div>
         </div>
 
@@ -275,7 +275,7 @@
 
         <div class="col-lg-6 menu-item filter-salad">
           <div class="menu-content">
-            مقانق<span>5.00 $</span>
+            مقانق<span>6.00 $</span>
           </div>
         </div>
 
@@ -287,13 +287,13 @@
 
         <div class="col-lg-6 menu-item filter-salad">
           <div class="menu-content">
-            سجق<span>4.00 $</span>
+            سجق<span>5.00 $</span>
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-salad">
           <div class="menu-content">
-            راس عصفور<span>6.00 $</span>
+            راس عصفور<span>7.00 $</span>
           </div>
         </div>
 
@@ -368,13 +368,13 @@
 
         <div class="col-lg-6 menu-item filter-platter">
           <div class="menu-content">
-           قرص بشحم <span>5.00 $</span>
+           قرص بشحم <span>6.00 $</span>
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-platter">
           <div class="menu-content">
-            قرص بلحم <span>6.00 $</span>
+            قرص بلحم <span>7.00 $</span>
           </div>
         </div>
 
@@ -398,7 +398,7 @@
 
         <div class="col-lg-6 menu-item filter-platter">
           <div class="menu-content">
-             كاستاليتا <span>7.00 $</span>
+             كاستاليتا <span>8.00 $</span>
           </div>
         </div>
 
@@ -540,7 +540,7 @@
 
         <div class="col-lg-6 menu-item filter-sandwiches">
           <div class="menu-content">
-            ربعية عرق BRIN <span>6.00 $</span>
+            ربعية عرق الصيّاد <span>7.00 $</span>
           </div>
         </div>
 
@@ -560,7 +560,7 @@
 
         <div class="col-lg-6 menu-item filter-sandwiches">
           <div class="menu-content">
-            كاس عرق<span>2.00 $</span>
+            كاس عرق<span>3.00 $</span>
           </div>
         </div>
 
@@ -673,7 +673,7 @@
 
         <div class="col-lg-6 menu-item filter-arguile">
           <div class="menu-content">
-            أرغيلة <span>4.50 $</span>
+            أرغيلة <span>7.00 $</span>
           </div>
         </div>
 
